Replace manual creating of URL (using, e.g., "file:" + f.getAbsolutePath() ) with progrematic one. (File.toURI().toURL()). Good for cross platform (Mac vs. Windows)
git-svn-id: https://wala.svn.sourceforge.net/svnroot/wala/trunk@3953 f5eafffb-2e1d-0410-98e4-8ec43c5233c4